--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Orbit - Bootstrap 4 Resume/CV Template for Developers</title>
+    <title>Asal Asgari - CV</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
