--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
         </div><!--//main-body-->
     </div>
 <footer>
+	  <div class="text-center">
+              
+        </div>
 	</footer>
     
 
