--- a/index.html
+++ b/index.html
@@ -198,11 +198,9 @@
 
         </div><!--//main-body-->
     </div>
-<footer>
-	  <div class="text-center">
-              
-        </div>
-	</footer>
+<footer class="footer">
+        <!--//container-->
+    </footer><!--//footer-->
     
 
 </body>
