--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Asal Asgari - CV</title>
+    <title>Orbit - Bootstrap 4 Resume/CV Template for Developers</title>
 
     <!-- Meta -->
     <meta charset="utf-8">
@@ -33,6 +33,8 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fas fa-envelope"></i>asal.asgari19@gmail.com</li>
                     <li class="github"><i class="fab fa-github"></i><a href="https://github.com/asal97" target="_blank">github.com/asal97</a></li>
+                  
+
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
@@ -73,19 +75,6 @@
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experiences</h2>
 
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Member and The Lead singer of RECITATIF music band</h3>
-                            <div class="time">spring of 2019 - Present</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Rasht , Guilan , Iran</div>
-                    </div><!--//meta-->
-                    <div class="details">
-                        <p>As I was 7 years old my parent discovered my talent in the music industry in the light of this fact, I started learning classical guitar in 2005, since then I've continued this field and I've also engaged in pop and flamenco style.</p>
-                        <p> Since 2013 I started working professionally on my vocal chords and since then I've engaged in a few local music bands.</p>
-                    </div><!--//details-->
-                </div><!--//item-->
 
                 <div class="item">
                     <div class="meta">
@@ -121,7 +110,24 @@
 <!--//item-->
 
             </section><!--//section-->
+            <section class="section experiences-section">
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-music"></i></span>Activities</h2>
 
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Member and The Lead singer of RECITATIF music band</h3>
+                            <div class="time">spring of 2019 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Rasht , Guilan , Iran</div>
+                    </div><!--//meta-->
+                </div><!--//item-->
+
+
+
+          <!--//item-->
+
+            </section>
 
             <section class="skills-section section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-rocket"></i></span>Skills &amp; Proficiency</h2>
@@ -164,7 +170,12 @@
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
                     </div><!--//item-->
-
+                    <div class="item">
+                        <h3 class="level-title">Proteus</h3>
+                        <div class="progress level-bar">
+                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 48%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                    </div><!--//item-->
                     <div class="item">
                         <h3 class="level-title">Prolog</h3>
                         <div class="progress level-bar">
@@ -190,6 +201,12 @@
                 <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
                     </div>
+                    <div class="item">
+                        <h3 class="level-title">Assembly</h3>
+                        <div class="progress level-bar">
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+                    </div>
 
 
                 </div>
@@ -198,10 +215,10 @@
 
         </div><!--//main-body-->
     </div>
-<footer class="footer">
+
+    <footer class="footer">
         <!--//container-->
     </footer><!--//footer-->
-    
 
 </body>
 </html>
