--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Member and The Lead singer of RECITATIF music band</h3>
+                            <h3 class="job-title">Member and The Lead singer of <em class="text-info">Recitatif</em> music band</h3>
                             <div class="time">spring of 2019 - Present</div>
                         </div><!--//upper-row-->
                         <div class="company">Rasht , Guilan , Iran</div>
