--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
                   <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 48%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                     </div><!--//item-->
+			 <div class="item">
+                        <h3 class="level-title">VALA</h3>
+                        <div class="progress level-bar">
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 47%" aria-valuenow="47" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
                     <div class="item">
                         <h3 class="level-title">Prolog</h3>
                         <div class="progress level-bar">
