--- a/index.html
+++ b/index.html
@@ -106,10 +106,93 @@
 </ul><!--//details-->
 
                 </div><!--//item-->
-
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Internship</h3>
+                            <div class="time">july 2019 - September 2019</div>
+                        </div><!--//upper-row-->
+                        <div class="company">IT Department ,
+            Moein Hotel ,
+            Fuman , Iran.
+            </div>
+                    </div>
+                  </div>
 <!--//item-->
 
             </section><!--//section-->
+
+
+
+
+
+
+          <!--//item-->
+          <section class="section experiences-section">
+              <h2 class="section-title"><span class="icon-holder"><i class="fas fa-globe"></i></span>Language Skills</h2>
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">IELTS (Overall 7)</h3>
+                          <div class="time">2019/09/07</div>
+                      </div><!--//upper-row-->
+                      <br>
+                    <div>
+                      <table class="table table-bordered  table-sm">
+                         <thead>
+                           <tr class="bg-info">
+                             <th>Listening</th>
+                             <th>Reading</th>
+                             <th>Writing</th>
+                             <th>speaking</th>
+                           </tr>
+                         </thead>
+                         <tbody>
+                           <tr>
+                             <td>7.5</td>
+                             <td>6.5</td>
+                             <td>6</td>
+                             <td>7</td>
+                           </tr>
+                         </tbody>
+                       </table>
+                    </div>
+                  </div><!--//meta-->
+              </div><!--//item-->
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">Goethe Zertifikat B1</h3>
+                      </div><!--//upper-row-->
+                      <br>
+                    <div>
+                      <table class="table table-bordered  table-sm">
+                         <thead>
+                           <tr class="bg-info">
+                             <th>Hören</th>
+                             <th>Lesen</th>
+                             <th>Schreiben</th>
+                             <th>Sprechen</th>
+                           </tr>
+                         </thead>
+                         <tbody>
+                           <tr>
+                             <td>70</td>
+                             <td>Expected</td>
+                             <td>79</td>
+                             <td>Expected</td>
+                           </tr>
+                         </tbody>
+                       </table>
+                    </div>
+                  </div><!--//meta-->
+              </div><!--//item-->
+
+          <!--//item-->
+          </section>
+      
+            </section>
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-music"></i></span>Activities</h2>
 
@@ -176,12 +259,6 @@
                   <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 48%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                     </div><!--//item-->
-			 <div class="item">
-                        <h3 class="level-title">VALA</h3>
-                        <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 47%" aria-valuenow="47" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-			</div>
                     <div class="item">
                         <h3 class="level-title">Prolog</h3>
                         <div class="progress level-bar">
