--- a/index.html
+++ b/index.html
@@ -38,16 +38,13 @@
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
-                <h2 class="container-block-title">Education</h2>
+                <h2 class="container-block-title">Personal Information</h2>
                 <div class="item">
-                    <h4 class="degree">Bachelor of Computer Engineering</h4>
-                    <h5 class="meta">University of Guilan</h5>
-                    <div class="time">2016 - now</div>
+                    <h4 class="degree">Date of birth : <span class="time">1997/10/17</span> </h4>
+
                 </div><!--//item-->
                 <div class="item">
-                    <h4 class="degree">Mathematics and Physics Diploma</h4>
-                    <h5 class="meta">Professor Reza Highschool</h5>
-                    <div class="time">2012 - 2016</div>
+                    <h4 class="degree">Nationality : <span class="time">Iranian</span> </h4>
                 </div><!--//item-->
             </div><!--//education-container-->
 
@@ -71,56 +68,43 @@
         </div><!--//sidebar-wrapper-->
 
         <div class="main-wrapper">
+          <section class="section experiences-section">
+              <h2 class="section-title"><span class="icon-holder"><i class="fas fa-book"></i></span>Education</h2>
 
-            <section class="section experiences-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experiences</h2>
-
-
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Teacher Assistant</h3>
-                            <div class="time">2018</div>
-                        </div><!--//upper-row-->
-                        <div class="company">Computer Engineering Department ,
- University of Guilan ,
- Rasht , Iran.
- <br>
- <ul><li class="text-info">Responsibility : Assesing on students' projects.</li></ul>
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">B.Sc in Computer Engineering</h3>
+                          <div class="time">sep.2016 - july.2020(Expected)</div>
+                      </div><!--//upper-row-->
+                      <div class="company"><strong>University of Guilan</strong> , Rasht , Iran
+<br>
+<ul><li class="text-info">GPA :16.48/20 (Till now)</li></ul>
 </div>
-                    </div><!--//meta-->
+                  </div><!--//meta-->
 
-                    <ul class="list-group">
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    Advanced Programming (Doctor Feyzi)
-    <span class="badge badge-info badge-pill">fall semester of 2018</span>
-  </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    Data Structure (Doctor Mirroshandel)
-    <span class="badge badge-info badge-pill">fall semester of 2018</span>
-  </li>
-  <li class="list-group-item d-flex justify-content-between align-items-center">
-    Advanced Programming (Doctor Mirroshandel)
-    <span class="badge badge-info badge-pill">spring semester of 2018</span>
-  </li>
-</ul><!--//details-->
 
-                </div><!--//item-->
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Internship</h3>
-                            <div class="time">july 2019 - September 2019</div>
-                        </div><!--//upper-row-->
-                        <div class="company">IT Department ,
-            Moein Hotel ,
-            Fuman , Iran.
-            </div>
-                    </div>
-                  </div>
+
+              </div><!--//item-->
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">Mathematics and Physics Diploma</h3>
+                          <div class="time">oct.2012 - sep.2016</div>
+                      </div><!--//upper-row-->
+                      <div class="company"><strong>Professor Reza Highschool</strong> , Rasht , Iran
+
+</div>
+                  </div><!--//meta-->
+
+
+
+              </div>
+
 <!--//item-->
 
-            </section><!--//section-->
+          </section><!--//section-->
+
 
 
 
@@ -128,6 +112,37 @@
 
 
           <!--//item-->
+          <section class="section experiences-section">
+              <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Awards and Owners</h2>
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">ranked within the top 15% GPA</h3>
+                          <div class="time">sep.2016 - present</div>
+                      </div><!--//upper-row-->
+
+                      <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
+                    <ul><li >among <strong>63</strong> fellow students in <span class="text-info">computer engineering</span></li></ul>
+                  </div></div><!--//meta-->
+              </div><!--//item-->
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">Received a full scholarship for B.Sc degree in computer engineering</h3>
+                          <div class="time">sep.2016</div>
+                      </div><!--//upper-row-->
+
+                      <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
+                    <ul><li >among <strong>160000</strong> partipants in <span class="text-info">Iranian university entrance exam</span></li></ul>
+                  </div></div><!--//meta-->
+              </div><!--//item-->
+
+
+          <!--//item-->
+          </section>
+
           <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-globe"></i></span>Language Skills</h2>
 
@@ -191,8 +206,57 @@
 
           <!--//item-->
           </section>
-      
+
             </section>
+            <section class="section experiences-section">
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experience</h2>
+
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Teacher Assistant</h3>
+                            <div class="time">2018</div>
+                        </div><!--//upper-row-->
+                        <div class="company">Computer Engineering Department ,
+  University of Guilan ,
+  Rasht , Iran.
+  <br>
+  <ul><li class="text-info">Responsibility : Assesing on students' projects.</li></ul>
+  </div>
+                    </div><!--//meta-->
+
+                    <ul class="list-group">
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Advanced Programming (Doctor Feyzi)
+    <span class="badge badge-info badge-pill">fall semester of 2018</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Data Structure (Doctor Mirroshandel)
+    <span class="badge badge-info badge-pill">fall semester of 2018</span>
+  </li>
+  <li class="list-group-item d-flex justify-content-between align-items-center">
+    Advanced Programming (Doctor Mirroshandel)
+    <span class="badge badge-info badge-pill">spring semester of 2018</span>
+  </li>
+  </ul><!--//details-->
+
+                </div><!--//item-->
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Internship</h3>
+                            <div class="time">july 2019 - September 2019</div>
+                        </div><!--//upper-row-->
+                        <div class="company">IT Department ,
+            Moein Hotel ,
+            Fuman , Iran.
+            </div>
+                    </div>
+                  </div>
+  <!--//item-->
+
+            </section><!--//section-->
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-music"></i></span>Activities</h2>
 
