--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
                     <h4 class="degree">Date of birth : <span class="time">1997/10/17</span> </h4>
 
                 </div><!--//item-->
-                <div class="item">
-                    <h4 class="degree">Nationality : <span class="time">Iranian</span> </h4>
-                </div><!--//item-->
             </div><!--//education-container-->
 
             <div class="languages-container container-block">
@@ -79,7 +76,7 @@
                       </div><!--//upper-row-->
                       <div class="company"><strong>University of Guilan</strong> , Rasht , Iran
 <br>
-<ul><li class="text-info">GPA :16.48/20 (Till now)</li></ul>
+<ul><li class="text-info"><strong>GPA :16.56/20 </strong>(from 1st to 7th semester)</li></ul>
 </div>
                   </div><!--//meta-->
 
@@ -93,6 +90,8 @@
                           <div class="time">oct.2012 - sep.2016</div>
                       </div><!--//upper-row-->
                       <div class="company"><strong>Professor Reza Highschool</strong> , Rasht , Iran
+                        <br>
+                        <ul><li class="text-info"><strong>GPA :19.85/20</strong> </li></ul>
 
 </div>
                   </div><!--//meta-->
@@ -104,11 +103,6 @@
 <!--//item-->
 
           </section><!--//section-->
-
-
-
-
-
 
 
           <!--//item-->
@@ -123,9 +117,21 @@
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
-                    <ul><li >among <strong>63</strong> fellow students in <span class="text-info">computer engineering</span></li></ul>
+                    <ul><li >among <strong>63</strong> fellow students in <span class="text-info"><strong>computer engineering</strong></span></li></ul>
                   </div></div><!--//meta-->
               </div><!--//item-->
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">Certificate of Achievement Honorable Mention</h3>
+                          <div class="time">Nov 2016</div>
+                      </div><!--//upper-row-->
+
+                      <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
+                    <ul><li> Participated in <strong>15th</strong> Iran Internet Contest <span class="text-info"><strong>icpc</strong></span> foundation </li></ul>
+                  </div></div><!--//meta-->
+              </div>
 
               <div class="item">
                   <div class="meta">
@@ -135,7 +141,7 @@
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
-                    <ul><li >among <strong>160000</strong> partipants in <span class="text-info">Iranian university entrance exam</span></li></ul>
+                    <ul><li >among <strong>160000</strong> partipants in <span class="text-info"><strong>Iranian university entrance exam</strong></span></li></ul>
                   </div></div><!--//meta-->
               </div><!--//item-->
 
@@ -192,6 +198,12 @@
                            </tr>
                          </thead>
                          <tbody>
+                           <tr class="bg-info">
+                             <td style="color:white;"> 2019/10/03 </td>
+                             <td style="color:white;">2019/12/08</td>
+                             <td style="color:white;">2019/10/01</td>
+                             <td style="color:white;">2019/12/10</td>
+                           </tr>
                            <tr>
                              <td>70</td>
                              <td>Expected</td>
@@ -210,7 +222,36 @@
             </section>
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-briefcase"></i></span>Experience</h2>
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">DataBase Developer</h3>
+                            <div class="time">December 2019 - Present</div>
+                        </div><!--//upper-row-->
+                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Allame Helli 5 Highschool</strong></a>, Tehran, Iran
+                </div>
+                <ul><li class="text-info"><strong>This project is still under construction for more information you can check out our github repository with this
+                   <a href="https://github.com/TheMn/internet-engineering-project">link</a>
+                </strong></li></ul>
+                    </div>
+                  </div>
 
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Internship</h3>
+                            <div class="time">july 2019 - September 2019</div>
+                        </div><!--//upper-row-->
+                        <div class="company">IT Department ,
+                Moein Hotel ,
+                Fuman , Iran.
+              </div>
+                <ul><li class="text-info"><strong>The program was an educational plan based on openCv (Open Source Computer Vision Library)
+     Which can be used to detect and recognize faces, track camera movements…
+</strong></li></ul>
+                    </div>
+                  </div>
 
                 <div class="item">
                     <div class="meta">
@@ -222,7 +263,7 @@
   University of Guilan ,
   Rasht , Iran.
   <br>
-  <ul><li class="text-info">Responsibility : Assesing on students' projects.</li></ul>
+  <ul><li class="text-info"><strong>Responsibility : Assesing on students' projects.</strong></li></ul>
   </div>
                     </div><!--//meta-->
 
@@ -242,23 +283,23 @@
   </ul><!--//details-->
 
                 </div><!--//item-->
-                <div class="item">
-                    <div class="meta">
-                        <div class="upper-row">
-                            <h3 class="job-title">Internship</h3>
-                            <div class="time">july 2019 - September 2019</div>
-                        </div><!--//upper-row-->
-                        <div class="company">IT Department ,
-            Moein Hotel ,
-            Fuman , Iran.
-            </div>
-                    </div>
-                  </div>
+
   <!--//item-->
 
             </section><!--//section-->
             <section class="section experiences-section">
                 <h2 class="section-title"><span class="icon-holder"><i class="fas fa-music"></i></span>Activities</h2>
+
+                <div class="item">
+                    <div class="meta">
+                        <div class="upper-row">
+                            <h3 class="job-title">Member of Executive Committee in  </h3>
+
+                            <div class="time">November 14th</div>
+                        </div><!--//upper-row-->
+                        <div class="company"><strong><span class="text-info">Guilan University Programming Contest 2019</span>, University of Guilan</strong> , Rasht , Iran</div>
+                    </div><!--//meta-->
+                </div><!--//item-->
 
                 <div class="item">
                     <div class="meta">
