--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Responsive HTML5 Resume/CV Template for Developers">
+    <meta name="description" content="Asal Asgari's CV">
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
     <link rel="shortcut icon" href="favicon.ico">
     <!-- Google Font -->
@@ -206,9 +206,9 @@
                            </tr>
                            <tr>
                              <td>70</td>
-                             <td>Expected</td>
+                             <td>63</td>
                              <td>79</td>
-                             <td>Expected</td>
+                             <td>61</td>
                            </tr>
                          </tbody>
                        </table>
@@ -228,7 +228,7 @@
                             <h3 class="job-title">DataBase Developer</h3>
                             <div class="time">December 2019 - Present</div>
                         </div><!--//upper-row-->
-                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Allame Helli 5 Highschool</strong></a>, Tehran, Iran
+                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Allame Helli 5 Highschool Website</strong></a>, Tehran, Iran
                 </div>
                 <ul><li class="text-info"><strong>This project is still under construction for more information you can check out our github repository with this
                    <a href="https://github.com/TheMn/internet-engineering-project">link</a>
@@ -288,7 +288,7 @@
 
             </section><!--//section-->
             <section class="section experiences-section">
-                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-music"></i></span>Activities</h2>
+                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-dumbbell"></i></span>Activities</h2>
 
                 <div class="item">
                     <div class="meta">
