--- a/index.html
+++ b/index.html
@@ -327,28 +327,42 @@
                     <div class="item">
                         <h3 class="level-title">JAVA </h3>
                         <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
                     </div><!--//item-->
 
+                    <div class="item">
+                        <h3 class="level-title">Python</h3>
+                        <div class="progress level-bar">
+                    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                    </div>
 
+                    <div class="item">
+                        <h3 class="level-title">sqlite3</h3>
+                        <div class="progress level-bar">
+						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+						</div>
+                    </div>
+
+                    <div class="item">
+                        <h3 class="level-title">C++</h3>
+                        <div class="progress level-bar">
+						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+						</div>
+                    </div>
 
                     <div class="item">
                         <h3 class="level-title">VHDL</h3>
                         <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
                     </div><!--//item-->
-                    <div class="item">
-                        <h3 class="level-title">Python</h3>
-                        <div class="progress level-bar">
-                    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 70%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                    </div><!--//item-->
+                    <!--//item-->
                     <div class="item">
                         <h3 class="level-title">HTML &amp; CSS</h3>
                         <div class="progress level-bar">
-                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
                     </div><!--//item-->
 
@@ -358,10 +372,11 @@
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
                     </div><!--//item-->
+
                     <div class="item">
                         <h3 class="level-title">Proteus</h3>
                         <div class="progress level-bar">
-                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 48%" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                     </div><!--//item-->
                     <div class="item">
@@ -372,27 +387,23 @@
                     </div>
 
                     <div class="item">
-                        <h3 class="level-title">C++</h3>
-                        <div class="progress level-bar">
-						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-                    </div>
-                    <div class="item">
-                        <h3 class="level-title">SQL</h3>
-                        <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-                    </div>
-                    <div class="item">
                         <h3 class="level-title">Javascript</h3>
                         <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
                     </div>
+
+                    <div class="item">
+                        <h3 class="level-title">Vala</h3>
+                        <div class="progress level-bar">
+                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                    </div>
+
                     <div class="item">
                         <h3 class="level-title">Assembly</h3>
                         <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
                     </div>
 
