--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Member of Executive Committee in  </h3>
+                            <h3 class="job-title">Member of Executive Committee</h3>
 
                             <div class="time">November 14th</div>
                         </div><!--//upper-row-->
