--- a/index.html
+++ b/index.html
@@ -150,6 +150,68 @@
           </section>
 
           <section class="section experiences-section">
+              <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Research Interests</h2>
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">•	Cognitive Science</h3>
+
+                      </div><!--//upper-row-->
+                      </div><!--//meta-->
+              </div><!--//item-->
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">•	Intelligent Systems</h3>
+                      </div><!--//upper-row-->
+                      </div><!--//meta-->
+              </div><!--//item-->
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">• Linguistics and Computational Linguistics</h3>
+                      </div><!--//upper-row-->
+                      </div><!--//meta-->
+              </div><!--//item-->
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">•	Cognitive Vision</h3>
+                      </div><!--//upper-row-->
+                      </div><!--//meta-->
+              </div><!--//item-->
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">• Human-Computer Interaction</h3>
+                      </div><!--//upper-row-->
+                      </div><!--//meta-->
+              </div><!--//item-->
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">• information and database systems</h3>
+                      </div><!--//upper-row-->
+                      </div><!--//meta-->
+              </div><!--//item-->
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">•	Machine learning</h3>
+                      </div><!--//upper-row-->
+                      </div><!--//meta-->
+              </div><!--//item-->
+
+
+          <!--//item-->
+          </section>
+
+          <section class="section experiences-section">
               <h2 class="section-title"><span class="icon-holder"><i class="fas fa-globe"></i></span>Language Skills</h2>
 
               <div class="item">
@@ -293,7 +355,7 @@
                 <div class="item">
                     <div class="meta">
                         <div class="upper-row">
-                            <h3 class="job-title">Member of Executive Committee</h3>
+                            <h3 class="job-title">Member of Executive Committee in  </h3>
 
                             <div class="time">November 14th</div>
                         </div><!--//upper-row-->
