Research interests fixed!

--- a/index.html
+++ b/index.html
@@ -155,15 +155,15 @@
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
+                          <h3 class="job-title">•	Intelligent Software Systems</h3>
+
+                      </div><!--//upper-row-->
+                      </div><!--//meta-->
+              </div><!--//item-->
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
                           <h3 class="job-title">•	Cognitive Science</h3>
-
-                      </div><!--//upper-row-->
-                      </div><!--//meta-->
-              </div><!--//item-->
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">•	Intelligent Systems</h3>
                       </div><!--//upper-row-->
                       </div><!--//meta-->
               </div><!--//item-->
@@ -171,7 +171,7 @@
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
-                          <h3 class="job-title">• Linguistics and Computational Linguistics</h3>
+                          <h3 class="job-title">•	information and database systems</h3>
                       </div><!--//upper-row-->
                       </div><!--//meta-->
               </div><!--//item-->
@@ -179,22 +179,14 @@
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
-                          <h3 class="job-title">•	Cognitive Vision</h3>
+                          <h3 class="job-title">•	Computer Vision and Pattern Recognition</h3>
                       </div><!--//upper-row-->
                       </div><!--//meta-->
               </div><!--//item-->
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
-                          <h3 class="job-title">• Human-Computer Interaction</h3>
-                      </div><!--//upper-row-->
-                      </div><!--//meta-->
-              </div><!--//item-->
-
-              <div class="item">
-                  <div class="meta">
-                      <div class="upper-row">
-                          <h3 class="job-title">• information and database systems</h3>
+                          <h3 class="job-title">•	Linguistics and Computational Linguistics</h3>
                       </div><!--//upper-row-->
                       </div><!--//meta-->
               </div><!--//item-->
@@ -203,6 +195,14 @@
                   <div class="meta">
                       <div class="upper-row">
                           <h3 class="job-title">•	Machine learning</h3>
+                      </div><!--//upper-row-->
+                      </div><!--//meta-->
+              </div><!--//item-->
+
+              <div class="item">
+                  <div class="meta">
+                      <div class="upper-row">
+                          <h3 class="job-title">•	Human-Computer Interaction</h3>
                       </div><!--//upper-row-->
                       </div><!--//meta-->
               </div><!--//item-->
