--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 Moein Hotel ,
                 Fuman , Iran.
               </div>
-                <ul><li class="text-info"><strong>The program was an educational plan based on openCv (Open Source Computer Vision Library)
+                <ul><li class="text-info"><strong>This program was an educational plan based on openCv (Open Source Computer Vision Library)
      Which can be used to detect and recognize faces, track camera movements…
 </strong></li></ul>
                     </div>
@@ -377,6 +377,12 @@
 						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
                     </div>
+                     <div class="item">
+                        <h3 class="level-title">MySQL</h3>
+                        <div class="progress level-bar">
+						    <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+						</div>
+                    </div>
 
                     <div class="item">
                         <h3 class="level-title">C++</h3>
@@ -406,40 +412,46 @@
 						</div>
                     </div><!--//item-->
 
+                       <div class="item">
+                        <h3 class="level-title">Vala</h3>
+                        <div class="progress level-bar">
+                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                    </div>
+
                     <div class="item">
                         <h3 class="level-title">Proteus</h3>
                         <div class="progress level-bar">
-                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                     </div><!--//item-->
                     <div class="item">
                         <h3 class="level-title">Prolog</h3>
                         <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
                     </div>
 
                     <div class="item">
                         <h3 class="level-title">Javascript</h3>
                         <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 40%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
-                    </div>
-
-                    <div class="item">
-                        <h3 class="level-title">Vala</h3>
-                        <div class="progress level-bar">
-                  <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
-                  </div>
                     </div>
 
                     <div class="item">
                         <h3 class="level-title">Assembly</h3>
                         <div class="progress level-bar">
-                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
                     </div>
 
+                          <div class="item">
+                        <h3 class="level-title">R</h3>
+                        <div class="progress level-bar">
+                <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+                    </div>
 
                 </div>
 
