--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                       </div><!--//upper-row-->
                       <div class="company"><strong>University of Guilan</strong> , Rasht , Iran
 <br>
-<ul><li class="text-info"><strong>GPA :16.56/20 </strong>(from 1st to 7th semester)</li></ul>
+<ul><li class="text-info"><strong>GPA :16.53/20 </strong>(Preliminary)</li></ul>
 </div>
                   </div><!--//meta-->
 
@@ -91,7 +91,7 @@
                       </div><!--//upper-row-->
                       <div class="company"><strong>Professor Reza Highschool</strong> , Rasht , Iran
                         <br>
-                        <ul><li class="text-info"><strong>GPA :19.85/20</strong> </li></ul>
+                        <ul><li class="text-info"><strong>GPA :19.71/20</strong> </li></ul>
 
 </div>
                   </div><!--//meta-->
