checkout my github :D

--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
                 <ul class="list-unstyled contact-list">
                     <li class="email"><i class="fas fa-envelope"></i>asal.asgari19@gmail.com</li>
                     <li class="github"><i class="fab fa-github"></i><a href="https://github.com/asal97" target="_blank">github.com/asal97</a></li>
+                    <li ><i class="fas fa-brain"></i>My academic project can be found in my github page make sure to check them out ^_^</li>
 
 
                 </ul>
-            </div><!--//contact-container-->
+            </div>
+
+            <!--//contact-container-->
             <div class="education-container container-block">
                 <h2 class="container-block-title">Personal Information</h2>
                 <div class="item">
@@ -471,6 +474,19 @@
 
                     </div>
                   </div>
+<!--        <div class="item">-->
+<!--                    <div class="meta">-->
+<!--                        <div class="upper-row">-->
+<!--                            <h3 class="job-title">Dr. Mohammad Salehi</h3>-->
+<!--                        </div>&lt;!&ndash;//upper-row&ndash;&gt;-->
+<!--                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan-->
+<!--                </div>-->
+<!--                <li class="email"><i class="fas fa-envelope"></i>   mohammad.salehi@guilan.ac.ir</li>-->
+<!--                <li class="email"><i class="fas fa-envelope"></i>   edu.salehi@gmail.com</li>-->
+<!--                        <li class="email"><i class="fas fa-globe"></i> <a href="https://staff.guilan.ac.ir/mohammad_salehi/" target="_blank">https://staff.guilan.ac.ir/mohammad_salehi/</a> </li>-->
+
+<!--                    </div>-->
+<!--                  </div>-->
   <!--//item-->
 
             </section>
