ANN and icpc Certificate added

--- a/index.html
+++ b/index.html
@@ -115,12 +115,16 @@
               <div class="item">
                   <div class="meta">
                       <div class="upper-row">
-                          <h3 class="job-title">ranked within the top 15% GPA</h3>
-                          <div class="time">sep.2016 - present</div>
+                          <h3 class="job-title">Neural Networks in R studio using Keras & TensorFlow Certificate</h3>
+                          <div class="time">2020/04/05</div>
+
                       </div><!--//upper-row-->
 
-                      <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
-                    <ul><li >among <strong>63</strong> fellow students in <span class="text-info"><strong>computer engineering</strong></span></li></ul>
+                      <div class="company"><span class="text-info">Start-Tech Academy</span>
+                          <a href="https://www.udemy.com/">, Udemy</a></span></li></ul>
+                          <ul><li>Completed 8 total hours of Neural Networks in Rstudio using keras and TensorFlow online course </li>
+                              <li><a href="assets/images/photo_2020-04-05_15-40-51.jpg">View Certificate</a></li></ul>
+
                   </div></div><!--//meta-->
               </div><!--//item-->
 
@@ -132,7 +136,8 @@
                       </div><!--//upper-row-->
 
                       <div class="company"><span class="text-info">university of guilan</span> , Rasht , Guilan , Iran
-                    <ul><li> Participated in <strong>15th</strong> Iran Internet Contest <span class="text-info"><strong>icpc</strong></span> foundation </li></ul>
+                          <ul><li> Participated in <strong>15th</strong> Iran Internet Contest <span class="text-info"><strong>icpc</strong></span> foundation </li>
+                           <li><a href="assets/images/2017_CertificateTeamMedal_Asia_Iran_Internet_410149 (1).pdf">View Certificate</a></li></ul>
                   </div></div><!--//meta-->
               </div>
 
@@ -291,7 +296,7 @@
                     <div class="meta">
                         <div class="upper-row">
                             <h3 class="job-title">DataBase Developer</h3>
-                            <div class="time">December 2019 - Present</div>
+                            <div class="time">December 2019 - March 2020</div>
                         </div><!--//upper-row-->
                         <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Allame Helli 5 Highschool Website</strong></a>, Tehran, Iran
                 </div>
@@ -474,20 +479,6 @@
 
                     </div>
                   </div>
-<!--        <div class="item">-->
-<!--                    <div class="meta">-->
-<!--                        <div class="upper-row">-->
-<!--                            <h3 class="job-title">Dr. Mohammad Salehi</h3>-->
-<!--                        </div>&lt;!&ndash;//upper-row&ndash;&gt;-->
-<!--                        <div class="company"><a class="text-info" href="http://allamehelli5.ir/"><strong> Assistant Professor</strong></a>, Department of Computer Engineering , University of Guilan-->
-<!--                </div>-->
-<!--                <li class="email"><i class="fas fa-envelope"></i>   mohammad.salehi@guilan.ac.ir</li>-->
-<!--                <li class="email"><i class="fas fa-envelope"></i>   edu.salehi@gmail.com</li>-->
-<!--                        <li class="email"><i class="fas fa-globe"></i> <a href="https://staff.guilan.ac.ir/mohammad_salehi/" target="_blank">https://staff.guilan.ac.ir/mohammad_salehi/</a> </li>-->
-
-<!--                    </div>-->
-<!--                  </div>-->
-  <!--//item-->
 
             </section>
         </div><!--//main-body-->
