--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
           <!--//item-->
           <section class="section experiences-section">
-              <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Awards and Owners</h2>
+              <h2 class="section-title"><span class="icon-holder"><i class="fas fa-award"></i></span>Awards and Honors</h2>
 
               <div class="item">
                   <div class="meta">
